// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat should fetch chat data and render without crash 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-1llqfms-0 bBAkaJ"
  >
    <div
      class="MuiTabs-root styled__TabContainer-sc-1llqfms-1 dJrtFc"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        style="overflow: hidden;"
      >
        <div
          aria-label="simple tabs example"
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-controls="simple-tabpanel-0"
            aria-labelledby="simple-tabpanel-0"
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorSecondary styled__Tab-sc-1llqfms-3 BXQwU Mui-selected"
            id="simple-tab-0"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Chat / QA
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-controls="simple-tabpanel-1"
            aria-labelledby="simple-tabpanel-1"
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorSecondary styled__Tab-sc-1llqfms-3 BXQwU"
            id="simple-tab-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              QA Only
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root-1 PrivateTabIndicator-colorSecondary-3 MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      aria-controls="simple-tabpanel-0"
      aria-labelledby="simple-tabpanel-0"
      class="MuiTabPanel-root styled__TabPanel-sc-1llqfms-2 ljDeDA"
      id="simple-tab-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-5 styled__Box-sc-7eb3vm-0 kkjyek"
        id="message-box"
      >
        <div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 cCTQBk MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                08:41
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__MenuButton-sc-h0bng9-3 RvpXS"
                  data-messageid="286"
                  data-testid="message-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__MenuIcon-sc-h0bng9-4 ieQDrx MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                <div
                  class="styled__MessageBody-sc-h0bng9-1 mlXih"
                >
                  わいわい
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__ReplyButton-sc-h0bng9-5 ilnbPt"
                  data-messageid="286"
                  data-testid="message-reply-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__ReplyIcon-sc-h0bng9-6 hpRTLe MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 cCTQBk MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                11:27
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__MenuButton-sc-h0bng9-3 RvpXS"
                  data-messageid="288"
                  data-testid="message-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__MenuIcon-sc-h0bng9-4 ieQDrx MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                <div
                  class="styled__MessageBody-sc-h0bng9-1 mlXih"
                >
                  わいわい
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__ReplyButton-sc-h0bng9-5 ilnbPt"
                  data-messageid="288"
                  data-testid="message-reply-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__ReplyIcon-sc-h0bng9-6 hpRTLe MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 styled__ChatReplyMessage-sc-h0bng9-2 cCTQBk loaNci MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="styled__MessageBody-sc-h0bng9-1 mlXih"
            >
              がやがや
            </div>
            <div
              class="styled__MenuButton-sc-h0bng9-3 RvpXS"
              data-messageid="343"
              data-replyto="288"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 styled__ChatReplyMessage-sc-h0bng9-2 cCTQBk loaNci MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="styled__MessageBody-sc-h0bng9-1 mlXih"
            >
              👍
            </div>
            <div
              class="styled__MenuButton-sc-h0bng9-3 RvpXS"
              data-messageid="344"
              data-replyto="288"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 styled__ChatReplyMessage-sc-h0bng9-2 cCTQBk loaNci MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="styled__MessageBody-sc-h0bng9-1 mlXih"
            >
              このメッセージは削除されました
            </div>
            <div
              class="styled__MenuButton-sc-h0bng9-3 RvpXS"
              data-messageid="345"
              data-replyto="288"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 ccGrOO MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                11:26
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__MenuButton-sc-h0bng9-3 RvpXS"
                  data-messageid="289"
                  data-testid="message-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__MenuIcon-sc-h0bng9-4 ieQDrx MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                <div
                  class="styled__MessageBody-sc-h0bng9-1 mlXih"
                >
                  このメッセージは削除されました
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="MuiPaper-root styled__ChatMessage-sc-h0bng9-0 cCTQBk MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiGrid-root MuiGrid-container"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                13:40
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__MenuButton-sc-h0bng9-3 RvpXS"
                  data-messageid="346"
                  data-testid="message-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__MenuIcon-sc-h0bng9-4 ieQDrx MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
              >
                <div
                  class="styled__MessageBody-sc-h0bng9-1 mlXih"
                >
                  🎉
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
              >
                <div
                  class="styled__ReplyButton-sc-h0bng9-5 ilnbPt"
                  data-messageid="346"
                  data-testid="message-reply-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root styled__ReplyIcon-sc-h0bng9-6 hpRTLe MuiSvgIcon-fontSizeSmall"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-controls="simple-tabpanel-1"
      aria-labelledby="simple-tabpanel-1"
      class="MuiTabPanel-root styled__TabPanel-sc-1llqfms-2 ljDeDA"
      hidden=""
      id="simple-tab-1"
      role="tabpanel"
    />
    <div
      class="styled__Container-sc-nbl6ba-0 cZiACc"
    >
      <form
        class="styled__ChatMessageForm-sc-nbl6ba-5"
      >
        <div
          class="styled__CheckBoxContainer-sc-nbl6ba-9 khgagE"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-7 Mui-checked MuiIconButton-colorSecondary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-9"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <div
            class="styled__label-sc-nbl6ba-10"
          >
            オートスクロール
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root styled__TextField-sc-nbl6ba-7 kRBvPZ"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorSecondary MuiInput-colorSecondary MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense MuiInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
              data-testid="message-form"
              name="chatMessage"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline"
        >
          <input
            class="MuiInputBase-input MuiInput-input"
            name="isQuestion"
            type="hidden"
            value=""
          />
        </div>
        <div
          class="styled__ButtonContainer-sc-nbl6ba-6 eVOFBv"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline"
          >
            <input
              class="MuiInputBase-input MuiInput-input"
              name="chatMessage"
              type="hidden"
              value="👍"
            />
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              👍
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <form
            class="styled__ChatMessageForm-sc-158ay7x-0"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline"
            >
              <input
                class="MuiInputBase-input MuiInput-input"
                name="chatMessage"
                type="hidden"
                value="👏"
              />
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                👏
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </form>
          <form
            class="styled__ChatMessageForm-sc-158ay7x-0"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline"
            >
              <input
                class="MuiInputBase-input MuiInput-input"
                name="chatMessage"
                type="hidden"
                value="🎉"
              />
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                🎉
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </form>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-disabled Mui-disabled"
            data-testid="submit-chat"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              送信
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-disabled Mui-disabled"
            data-testid="submit-qa"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              質問する
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Chat should render without crash when no data provided 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-1llqfms-0 bBAkaJ"
  >
    <div
      class="MuiTabs-root styled__TabContainer-sc-1llqfms-1 dJrtFc"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        style="overflow: hidden;"
      >
        <div
          aria-label="simple tabs example"
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-controls="simple-tabpanel-0"
            aria-labelledby="simple-tabpanel-0"
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorSecondary styled__Tab-sc-1llqfms-3 BXQwU Mui-selected"
            id="simple-tab-0"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Chat / QA
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-controls="simple-tabpanel-1"
            aria-labelledby="simple-tabpanel-1"
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorSecondary styled__Tab-sc-1llqfms-3 BXQwU"
            id="simple-tab-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              QA Only
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root-10 PrivateTabIndicator-colorSecondary-12 MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      aria-controls="simple-tabpanel-0"
      aria-labelledby="simple-tabpanel-0"
      class="MuiTabPanel-root styled__TabPanel-sc-1llqfms-2 ljDeDA"
      id="simple-tab-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-14 styled__Box-sc-7eb3vm-0 kkjyek"
        id="message-box"
      />
    </div>
    <div
      aria-controls="simple-tabpanel-1"
      aria-labelledby="simple-tabpanel-1"
      class="MuiTabPanel-root styled__TabPanel-sc-1llqfms-2 ljDeDA"
      hidden=""
      id="simple-tab-1"
      role="tabpanel"
    />
    <div
      class="styled__Container-sc-nbl6ba-0 cZiACc"
    >
      <form
        class="styled__ChatMessageForm-sc-nbl6ba-5"
      >
        <div
          class="styled__CheckBoxContainer-sc-nbl6ba-9 khgagE"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-16 Mui-checked MuiIconButton-colorSecondary"
          >
            <span
              class="MuiIconButton-label"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-18"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </span>
          <div
            class="styled__label-sc-nbl6ba-10"
          >
            オートスクロール
          </div>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root styled__TextField-sc-nbl6ba-7 kRBvPZ"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorSecondary MuiInput-colorSecondary MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense MuiInput-marginDense"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
              data-testid="message-form"
              name="chatMessage"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline"
        >
          <input
            class="MuiInputBase-input MuiInput-input"
            name="isQuestion"
            type="hidden"
            value=""
          />
        </div>
        <div
          class="styled__ButtonContainer-sc-nbl6ba-6 eVOFBv"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline"
          >
            <input
              class="MuiInputBase-input MuiInput-input"
              name="chatMessage"
              type="hidden"
              value="👍"
            />
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              👍
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <form
            class="styled__ChatMessageForm-sc-158ay7x-0"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline"
            >
              <input
                class="MuiInputBase-input MuiInput-input"
                name="chatMessage"
                type="hidden"
                value="👏"
              />
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                👏
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </form>
          <form
            class="styled__ChatMessageForm-sc-158ay7x-0"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline"
            >
              <input
                class="MuiInputBase-input MuiInput-input"
                name="chatMessage"
                type="hidden"
                value="🎉"
              />
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained styled__ReactButton-sc-158ay7x-1 fhKoAh"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                🎉
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </form>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-disabled Mui-disabled"
            data-testid="submit-chat"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              送信
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-disabled Mui-disabled"
            data-testid="submit-qa"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              質問する
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
